@@ -44,6 +44,11 @@ endif::[]
 
 - Rename disabled_instrumentations to disable_instrumentations {pull}695[#695]
 
+[float]
+===== Fixed
+
+- Fix thread race condition in Metric#collect method {pull}669[#669]
+
 [[release-notes-3.4.0]]
 ==== 3.4.0 (2020-01-10)
 
